# shizofrenia

./: .gitignore  README.md  dockerfile  main.py  models.py  pyproject.toml  pytest.ini  requirements.txt  router.py  shemas.py
.github/workflows/: deploy-on-prod.yml
model_inference/: .dockerignore  dockerfile  main.py  router.py
tests/: test_model.py
