[tool.poetry]
name = "shix"
version = "0.1.0"
description = ""
authors = ["Andrew <suhowandrew@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = "0.27.0"
pydantic = "2.5.3"
joblib = "^1.4.2"
pytest = "^8.3.3"
trl = "^0.11.0"
transformers = "^4.44.2"
peft = "^0.12.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
